// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments should compile comments for module: (Output File Strategy "members") (Option Group "1") 1`] = `
"# typedoc-stubs

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](interfaces/CommentInterface.md) - Links to CommentInterface
- [Links to CommentInterface.prop](interfaces/CommentInterface.md)
- [Links to CommentInterface.propb](interfaces/CommentInterface.md)
- [CommentEnum.MemberB](enumerations/CommentEnum.md)
- [SameName:var](variables/SameName.md)
- [SameName:interface](interfaces/SameName.md)
- [SameName.prop](interfaces/SameName.md)
- [prop:var](variables/prop.md)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

- [CommentEnum](enumerations/CommentEnum.md)

## Interfaces

- [CommentInterface](interfaces/CommentInterface.md)
- [SameName](interfaces/SameName.md)

## Variables

- [SameName](variables/SameName.md)
- [prop](variables/prop.md)
- [propb](variables/propb.md)
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "members") (Option Group "2") 1`] = `
"# typedoc-stubs

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](http:/public-path/interfaces/CommentInterface.md) - Links to CommentInterface
- [Links to CommentInterface.prop](http:/public-path/interfaces/CommentInterface.md#prop)
- [Links to CommentInterface.propb](http:/public-path/interfaces/CommentInterface.md#propb)
- [CommentEnum.MemberB](http:/public-path/enumerations/CommentEnum.md#memberb)
- [SameName:var](http:/public-path/variables/SameName.md)
- [SameName:interface](http:/public-path/interfaces/SameName.md)
- [SameName.prop](http:/public-path/interfaces/SameName.md#prop)
- [prop:var](http:/public-path/variables/prop.md)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

| Enumeration | Description |
| :------ | :------ |
| [CommentEnum](http:/public-path/enumerations/CommentEnum.md) | - |

## Interfaces

| Interface | Description |
| :------ | :------ |
| [CommentInterface](http:/public-path/interfaces/CommentInterface.md) | - |
| [SameName](http:/public-path/interfaces/SameName.md) | - |

## Variables

| Variable | Description |
| :------ | :------ |
| [SameName](http:/public-path/variables/SameName.md) | - |
| [prop](http:/public-path/variables/prop.md) | - |
| [propb](http:/public-path/variables/propb.md) | - |
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "modules") (Option Group "1") 1`] = `
"# typedoc-stubs

Comments form module comments

## Contents

- [Links](exports.md#links)
- [Tag A](exports.md#tag-a)
- [Tag B](exports.md#tag-b)
- [Html And Jsx](exports.md#html-and-jsx)
- [Enumerations](exports.md#enumerations)
  - [CommentEnum](exports.md#commentenum)
- [Interfaces](exports.md#interfaces)
  - [CommentInterface](exports.md#commentinterface)
  - [SameName](exports.md#samename)
- [Variables](exports.md#variables)
  - [SameName](exports.md#samename-1)
  - [prop](exports.md#prop)
  - [propb](exports.md#propb)

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](exports.md#commentinterface) - Links to CommentInterface
- [Links to CommentInterface.prop](exports.md#commentinterface)
- [Links to CommentInterface.propb](exports.md#commentinterface)
- [CommentEnum.MemberB](exports.md#commentenum)
- [SameName:var](exports.md#samename-1)
- [SameName:interface](exports.md#samename)
- [SameName.prop](exports.md#samename)
- [prop:var](exports.md#prop)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

### CommentEnum

#### Enumeration Members

| Member | Value | Description |
| :------ | :------ | :------ |
| \`Member\` | \`0\` | Comment for Member<br /><br />**Deprecated**<br />Deprecated member<br /><br />**See**<br />[SameName](exports.md#samename-1) |
| \`MemberB\` | \`1\` | - |

## Interfaces

### CommentInterface

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | - |
| \`propb\` | \`string\` | - |

***

### SameName

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | - |
| \`propb\` | \`string\` | - |

## Variables

### SameName

> **SameName**: \`true\`

***

### prop

> **\`const\`** **prop**: \`true\` = \`true\`

***

### propb

> **\`const\`** **propb**: \`true\` = \`true\`
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "modules") (Option Group "2") 1`] = `
"# typedoc-stubs

Comments form module comments

## Contents

- [Links](exports.md#links)
- [Tag A](exports.md#tag-a)
- [Tag B](exports.md#tag-b)
- [Html And Jsx](exports.md#html-and-jsx)
- [Enumerations](exports.md#enumerations)
  - [CommentEnum](exports.md#commentenum)
- [Interfaces](exports.md#interfaces)
  - [CommentInterface](exports.md#commentinterface)
  - [SameName](exports.md#samename)
- [Variables](exports.md#variables)
  - [SameName](exports.md#samename-1)
  - [prop](exports.md#prop)
  - [propb](exports.md#propb)

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](http:/public-path/exports.md#commentinterface) - Links to CommentInterface
- [Links to CommentInterface.prop](http:/public-path/exports.md#prop)
- [Links to CommentInterface.propb](http:/public-path/exports.md#propb)
- [CommentEnum.MemberB](http:/public-path/exports.md#memberb)
- [SameName:var](http:/public-path/exports.md#samename-1)
- [SameName:interface](http:/public-path/exports.md#samename)
- [SameName.prop](http:/public-path/exports.md#prop-1)
- [prop:var](http:/public-path/exports.md#prop-2)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

### CommentEnum

#### Enumeration Members

| Member | Value | Description |
| :------ | :------ | :------ |
| <a id="member" name="member"></a> \`Member\` | \`0\` | Comment for Member<br /><br />**Deprecated**<br />Deprecated member<br /><br />**See**<br />[SameName](http:/public-path/exports.md#samename-1) |
| <a id="memberb" name="memberb"></a> \`MemberB\` | \`1\` | - |

## Interfaces

### CommentInterface

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop" name="prop"></a> \`prop\` | \`string\` | - |
| <a id="propb" name="propb"></a> \`propb\` | \`string\` | - |

***

### SameName

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop-1" name="prop-1"></a> \`prop\` | \`string\` | - |
| <a id="propb-1" name="propb-1"></a> \`propb\` | \`string\` | - |

## Variables

### SameName

> **SameName**: \`true\`

***

### prop

> **\`const\`** **prop**: \`true\` = \`true\`

***

### propb

> **\`const\`** **propb**: \`true\` = \`true\`
"
`;
